--- a/styles/HomeStyles.module.scss
+++ b/styles/HomeStyles.module.scss
@@ -10,11 +10,15 @@
     justify-content: space-between;
     padding: 1rem 0.2rem;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1250px;
     margin: 0 auto;
 
     @media (max-width: 768px) {
+      position: fixed;
+      max-width: none;
       flex-direction: column;
+      background-color: #fff;
+      box-shadow: 2px 3px 10px 3px #00000047;
     }
 
     .search-input {
